--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     image: zabbix/zabbix-web-nginx-pgsql:alpine-6.0-latest
     container_name: zabbix-web
     ports:
-      - "8080:8080"
+      - "8081:8080"
     environment:
       - ZBX_SERVER_HOST=zabbix-server
       - DB_SERVER_HOST=postgres
@@ -41,7 +41,7 @@ services:
     networks:
       - monitoring
 
-  # PostgreSQL Database
+  # PostgreSQL Database for Zabbix
   postgres:
     image: postgres:14-alpine
     container_name: zabbix-postgres
@@ -60,14 +60,39 @@ services:
     networks:
       - monitoring
 
+  # TimescaleDB for metrics storage
+  timescaledb:
+    image: timescale/timescaledb:latest-pg14
+    container_name: timescaledb
+    ports:
+      - "5433:5432"
+    environment:
+      - POSTGRES_USER=zabbix
+      - POSTGRES_PASSWORD=zabbix
+      - POSTGRES_DB=metrics
+    volumes:
+      - timescale_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U zabbix -d metrics"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: unless-stopped
+    networks:
+      - monitoring
+
   # Backend API
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
     container_name: backend
+    ports:
+      - "8000:8000"
     environment:
       - DATABASE_URL=postgresql://zabbix:zabbix@postgres:5432/zabbix
+      - DB_URL=postgresql://zabbix:zabbix@timescaledb:5432/metrics
+      - ZABBIX_API_URL=http://zabbix-web:8080/api_jsonrpc.php
       - ZABBIX_SERVER=zabbix-server
       - ZABBIX_USER=Admin
       - ZABBIX_PASSWORD=zabbix
@@ -76,7 +101,11 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+      timescaledb:
+        condition: service_healthy
       zabbix-server:
+        condition: service_started
+      zabbix-web:
         condition: service_started
     restart: unless-stopped
     networks:
@@ -102,3 +131,4 @@ networks:
 
 volumes:
   postgres_data:
+  timescale_data:
